--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<h1>This is a Test</h1>
 Test
-Test
+<ul>
+<li>1</li>
+</ul>
 </body>
 </html>
