--- a/solve/solvePoints.html
+++ b/solve/solvePoints.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="./solve.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0;" /> 
 </head>
 
 <body>
